--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ sqlx = { version = "0.7", features = [
     "runtime-tokio",
     "mysql",
     # "chrono",
-    # "macros",
+    "macros",
     # "any",
 ] }
 
@@ -59,6 +59,7 @@ tokio-context = "0.1.3"
 enum_dispatch = "0.3.13"
 tokio-metrics = "0.3.1"
 unique_id = "0.1.5"
+query_map = { version = "0.7.0", features = ["url-query"] }
 
 [dev-dependencies]
 dotenvy = { version = "0.15.7" }
