--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,13 +64,26 @@ query_map = { version = "0.7.0", features = ["url-query"] }
 [dev-dependencies]
 dotenvy = { version = "0.15.7" }
 
+[profile.dev]
+opt-level = 0
+debug = true
+split-debuginfo = '...'  # 平台指定。
+debug-assertions = true
+overflow-checks = true
+lto = false
+panic = 'unwind'
+incremental = true
+codegen-units = 256
+rpath = false
+
 [profile.release]
 # https://doc.rust-lang.org/cargo/reference/profiles.html
 opt-level = 3
 overflow-checks = true #  integer overflow checks.
-debug = true
-
-[profile.dev]
-opt-level = 1
-overflow-checks = false
-debug = true
+debug = false
+debug-assertions = false
+lto = false
+panic = 'unwind'
+incremental = false
+codegen-units = 16
+rpath = false
